@@ -19,6 +19,7 @@ New in SVN
 * Fixed Issue 455: New pisa/xhtml2pdf has very different imports
 * Reopened Issue 289: Broken bullet customization.
 * Reopened Issue 310: Line numbers in code blocks are wrong
+* Reopened Issue 337: Bad layout with inline images in tables
 
 New in 0.92
 -----------
